dataset1235/2025-2/805158916/users/1639372129/executions/2651470117_3691284457.log
== RUN (2025-08-27 03:19:53)
-- CODE: 
import math

N1 = float(input("insira a nota 1: "))
N2 = float(input("insira a nota 2: "))
N3 = float(input("insira a nota 3: "))
N4 = float(input("insira a nota 4: "))
nt = N1 + N2 + N3 + N3
md = N1*1+N2*2+N3*3+N4*4)// 10
print(round(md, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    md = N1*1+N2*2+N3*3+N4*4)// 10
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    md = N1*1+N2*2+N3*3+N4*4)// 10
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    md = N1*1+N2*2+N3*3+N4*4)// 10
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    md = N1*1+N2*2+N3*3+N4*4)// 10
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    md = N1*1+N2*2+N3*3+N4*4)// 10
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    md = N1*1+N2*2+N3*3+N4*4)// 10
                            ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:23:31)
-- CODE: 
import math

N1 = float(input("insira a nota 1: "))
N2 = float(input("insira a nota 2: "))
N3 = float(input("insira a nota 3: "))
N4 = float(input("insira a nota 4: "))
md = (N1*1+N2*2+N3*3+N4*4)/ 10
print(round(md, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:20:10)
-- CODE: 
import math

N1 = float(input("insira a nota 1: "))
N2 = float(input("insira a nota 2: "))
N3 = float(input("insira a nota 3: "))
N4 = float(input("insira a nota 4: "))
nt = N1 + N2 + N3 + N3
md = N1*1+N2*2+N3*3+N4*4 // 10
print(round(md, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 46.4
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 49.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 44.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 31.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 156.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 42.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 02:01:43)
-- CODE: 
N1 = float(input("insira a nota 1: "))
N2 = float(input("insira a nota 2: "))
N3 = float(input("insira a nota 3: "))
N4 = float(input("insira a nota 4: "))
md = N1*1 + N2*2 + N3*3 + N4*4 // 4
print(round(md, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 51.4
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 55.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 49.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 37.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 180.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 48.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:19:52)
-- CODE: 
import math

N1 = float(input("insira a nota 1: "))
N2 = float(input("insira a nota 2: "))
N3 = float(input("insira a nota 3: "))
N4 = float(input("insira a nota 4: "))
nt = N1 + N2 + N3 + N3
md = N1*1+N2*2+N3*3+N4*4)// 10
print(round(md, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 8
    md = N1*1+N2*2+N3*3+N4*4)// 10
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 8
    md = N1*1+N2*2+N3*3+N4*4)// 10
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 8
    md = N1*1+N2*2+N3*3+N4*4)// 10
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 8
    md = N1*1+N2*2+N3*3+N4*4)// 10
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 8
    md = N1*1+N2*2+N3*3+N4*4)// 10
                            ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 8
    md = N1*1+N2*2+N3*3+N4*4)// 10
                            ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:20:44)
-- CODE: 
import math

N1 = float(input("insira a nota 1: "))
N2 = float(input("insira a nota 2: "))
N3 = float(input("insira a nota 3: "))
N4 = float(input("insira a nota 4: "))
nt = N1 + N2 + N3 + N3
md = (N1*1+N2*2+N3*3+N4*4)// 10
print(round(md, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 7.0
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 8.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 6.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
insira a nota 1: insira a nota 2: insira a nota 3: insira a nota 4: 7.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
